=========
Changelog
=========

1.0b27 (unreleased)
===================

- Do not configure environments locally when running remote deployments. Use
  order as determined by one reference remote host. #13530


1.0b26 (2014-08-05)
===================

- Enhance git Clone component to support the full suite of functionality the
  mercurial one has (incoming/outgoing/local changes etc.).

  NOTE: This changes ``batou.lib.git.Clone`` in backward-incompatible ways:
  1. The namevar is now only the ``url``. The previously also accepted usage
     of passing the ``target`` as the namevar no longer works.
  2. ``update_unpinned`` is gone, use the ``branch``/``revision``/``vcs_update``
     mechanism instead.


1.0b25 (2014-07-31)
===================

- Improve gpg handling: don't do --no-tty or --batch any longer as we actually
  only run the gpg code in (local) terminal environments usually.


1.0b24 (2014-07-04)
===================

- Actually fix unzipping.

- Remove environment option ``connect_method``, and use autodetection instead:
  If we're not the configured ``service_user`` after the plain ssh connect,
  run sudo.

- Refactor attributes and overrides: attributes allow template expansion now
  and also converting default values. The Attribute class has moved to the
  batou component module.

- Yield nonzero returncode on remote exceptions.

- Add convenience converter for attributes "list" to handle comma separated
  lists of strings.

- Force safety of Nagios service description field: prohibit "," as its not
  safe for Nagios business processes.

- Allow specifying custom rsync options for SyncDir: the '--inplace' option
  is a good idea in most cases, but not all. Fixes #11846.

- Make supervisor restart/reload more robust towards non-running supervisors
  with lying PID files. Fixes #12744.

- Remove harmful decoding step in File verify that caused wrong results.


1.0b23 (2014-06-30)
===================
